--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,21 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:title="Home"
-        app:showAsAction="ifRoom"
+
         android:icon="@drawable/home_icon"
         android:id="@+id/home_menu"/>
     <item android:title="Search"
-        app:showAsAction="ifRoom"
         android:icon="@drawable/search_icon"
         android:id="@+id/search_menu"/>
     <item android:title="Notify"
         android:icon="@drawable/notify_icon"
-        app:showAsAction="ifRoom"
         android:id="@+id/notify_menu"/>
     <item android:title="Settings"
         android:icon="@drawable/settings_icon"
-        app:showAsAction="ifRoom"
         android:id="@+id/settings_menu"/>
 </menu>
