--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:menu="@menu/bottom_nav_menu"
-    tools:context=".HomeFragment">
+    tools:context=".fragments.HomeFragment">
 
 
     <Button
