--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.volkankelleci.weatherapplicationfordi.HomeFragment"
+        android:name="com.volkankelleci.weatherapplicationfordi.fragments.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" >
         <action
@@ -22,17 +22,17 @@
     </fragment>
     <fragment
         android:id="@+id/searchFragment"
-        android:name="com.volkankelleci.weatherapplicationfordi.SearchFragment"
+        android:name="com.volkankelleci.weatherapplicationfordi.fragments.SearchFragment"
         android:label="fragment_search"
         tools:layout="@layout/fragment_search" />
     <fragment
         android:id="@+id/notifyFragment"
-        android:name="com.volkankelleci.weatherapplicationfordi.NotifyFragment"
+        android:name="com.volkankelleci.weatherapplicationfordi.fragments.NotifyFragment"
         android:label="fragment_notify"
         tools:layout="@layout/fragment_notify" />
     <fragment
         android:id="@+id/settingsFragment"
-        android:name="com.volkankelleci.weatherapplicationfordi.SettingsFragment"
+        android:name="com.volkankelleci.weatherapplicationfordi.fragments.SettingsFragment"
         android:label="fragment_settings"
         tools:layout="@layout/fragment_settings" />
 </navigation>
