--- a/app/src/main/res/layout/home_raw.xml
+++ b/app/src/main/res/layout/home_raw.xml
@@ -5,6 +5,7 @@
 
     <TextView
         android:layout_width="match_parent"
+        android:id="@+id/sayHello"
         android:layout_height="match_parent">
 
     </TextView>
