--- a/app/src/main/res/layout/home_raw.xml
+++ b/app/src/main/res/layout/home_raw.xml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp">
+    android:layout_height="50dp"
+    android:orientation="horizontal">
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="100dp"
         android:id="@+id/sayHello"
+        android:text="TEST"
+        android:layout_height="wrap_content">
+
+    </TextView>
+    <TextView
+        android:layout_width="match_parent"
+        android:id="@+id/sayNo"
+        android:text="TEST"
         android:layout_height="match_parent">
 
     </TextView>
+
 
 </LinearLayout>
